--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "js": "shx mkdir -p dist/_js && terser src/_js/main.js -cm -o dist/_js/main.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
-    "sw": "workbox injectManifest workbox-config.js && terser dist/sw.js -cm -o dist/sw.js",
+    "sw": "terser src/sw.js -cm -o dist/sw.js",
     "copy-img": "shx cp ./node_modules/@browser-logos/{chrome,firefox,node.js,safari}/*.svg src/_css/img/",
     "copy-js": "shx cp ./node_modules/dark-mode-toggle/dist/dark-mode-toggle.min.mjs dist/_js/dark-mode-toggle.mjs",
     "img-video-dimensions": "node add-image-and-video-dimensions.js",
@@ -70,7 +70,6 @@
     "postcss-custom-properties": "^13.0.0",
     "shx": "^0.3.4",
     "superstatic": "^9.0.0",
-    "terser": "^5.16.0",
-    "workbox-cli": "^4.3.1"
+    "terser": "^5.16.0"
   }
 }
